# charades

./: .travis.yml  CMakeLists.txt  README.md  words.txt
apps/client/: App.cpp  App.hpp  CMakeLists.txt  CharadesWindow.cpp  CharadesWindow.hpp  CharadesWindow.ui  CommunicationHandler.cpp  CommunicationHandler.hpp  ConnectDialog.cpp  ConnectDialog.h  ConnectDialog.ui  DrawWidget.cpp  DrawWidget.hpp  Main.cpp  MessageReceiver.cpp  MessageReceiver.hpp  ServerHandler.cpp  ServerHandler.hpp  client_en_150.ts
apps/server/: CMakeLists.txt  CharadesWordsPool.cpp  CharadesWordsPool.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp  IOHandler.cpp  IOHandler.hpp  IoHandler.cpp  IoHandler.hpp  LogicHandler.cpp  LogicHandler.hpp  Main.cpp  Player.cpp  Player.hpp  PlayersHandler.cpp  PlayersHandler.hpp  Room.cpp  Room.hpp  RoomsHandler.cpp  RoomsHandler.hpp  Server.cpp  Server.hpp  charadesWordsPool.cpp  charadesWordsPool.hpp  main.cpp  words.txt
include/: IncomingMessage.hpp  IncomingMessageQueue.hpp  Message.hpp  OutgoingMessageQueue.hpp  Socket.hpp  WebSocket.h  WebSocket.hpp  cpptime.h  tmp.h
src/: CMakeLists.txt  IncomingMessageQueue.cpp  Message.cpp  OutgoingMessageQueue.cpp  Socket.cpp  WebSocket.cpp  tmp.cpp
